...

  List<MyStep> stepList() => [
        MyStep(
          isActive: _activeStepIndex >= 0,
          title: const Text(""),
          label: const Text(
            "Basics",
          ),
          content: Container(
            margin: EdgeInsets.only(
                bottom: MediaQuery.of(context).viewInsets.bottom),
            child: StepBasics(
              eventTitleController: eventTitleController,
...
          ),
        ),
        MyStep(
          isActive: _activeStepIndex >= 1,
          title: const Text(""),
          label: const Text(
            "Places",
          ),
          content: StepPlaces(
            locations: locations,
            addLocation: (location) {
              setState(() {
                locations.add(location);
...
          ),
        ),
        MyStep(
          isActive: _activeStepIndex >= 2,
          title: const Text(""),
          label: const Text(
            "Dates",
          ),
          content: StepDates(
            dates: dates,
            addDate: (value) {
              setState(() {
                String day = value[0];
...
          ),
        ),
        MyStep(
          isActive: _activeStepIndex >= 3,
          title: const Text(""),
          label: const Text(
            "Invite",
          ),
          content: StepInvite(
            organizerUid:
                Provider.of<FirebaseUser>(context, listen: false).user!.uid,
            invitees: invitees,
            addInvitee: (UserCollection user) {
...
