...
        PillBox(
          child: Row(
            mainAxisAlignment: MainAxisAlignment.center,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              Text(
                "Same time for all dates",
                style: Theme.of(context).textTheme.titleLarge,
              ),
              Container(padding: const EdgeInsets.symmetric(horizontal: 5)),
              SizedBox(
                width: 50 * 1.4,
                height: 40 * 1.4,
                child: FittedBox(
                  fit: BoxFit.fill,
                  child: Switch(
                    key: const Key("same_slots_switch"),
                    value: _fixedTimeSlots,
                    onChanged: (value) async {
                      if (value) {
                        setState(() {
                          _fixedTimeSlots = false;
                        });
...
