...
            );
          },
        ),
        ListTile(
          contentPadding: const EdgeInsets.all(0),
          title: Text(
            "Close the poll",
            overflow: TextOverflow.ellipsis,
            style: Theme.of(context).textTheme.titleLarge,
          ),
          leading: Container(
            padding: const EdgeInsets.symmetric(vertical: 5),
            decoration: BoxDecoration(
...
