...
          ListTile(
            contentPadding: const EdgeInsets.all(0),
            minLeadingWidth: 0,
            title: Container(
              padding: const EdgeInsets.only(top: 8, bottom: 8),
              child: Text(
                "Deadline for voting",
                style: Theme.of(context).textTheme.headlineSmall,
              ),
            ),
            subtitle: TextField(
              enabled: false,
              decoration: const InputDecoration(
...
